--- a/webthucung/app/templates/app/home.html
+++ b/webthucung/app/templates/app/home.html
@@ -38,6 +38,7 @@
                   <li><a class="dropdown-item" href="{% url 'chi_tiet_thu_cung' %}">Thông tin chi tiết của thú cưng</a></li>
                   <li><a class="dropdown-item" href="{% url 'dang_ky_kham_benh' %}">Đăng ký khám bệnh</a></li>
                   <li><a class="dropdown-item" href="{% url 'danh_gia_nguoi_dung' %}">Đánh giá người dùng</a></li>
+                  <li><a class="dropdown-item" href="{% url 'giao_dien_khach_hang' %}">Tài khoản</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="{% url 'thong_tin_khac' %}">Thông tin khác</a></li>
                 </ul>
