--- a/webthucung/app/templates/dang_ky_kham_benh.html
+++ b/webthucung/app/templates/dang_ky_kham_benh.html
@@ -252,7 +252,7 @@
                   <span class="badge rounded-pill badge-primary">3</span>
               </h4>
 
-              <!-- Cart -->
+              <!-- Lưu ý -->
               <ul class="list-group mb-3">
                   <li class="list-group-item d-flex justify-content-between">
                       <div>
@@ -281,9 +281,9 @@
   </div>
 </main>
 
-
-<a class="btn btn-outline-success" type="submit" href="{% url 'home' %}">Quay lại Trang Trước</a>
-
+</div>
+  <a class="btn btn-outline-success"  type="submit" href="{% url 'home' %}">Quay lại Trang Trước</a>
+</div>
 <!-- footer -->
 <footer class="text-center text-white mt-4" style="background-color:rgb(4, 82, 47);"> 
 
@@ -297,7 +297,7 @@
 
   </div>
   <!-- Copyright -->
-</footer>
+   </footer>
 
-</body>
-</html>
+       </body>
+          </html>
