--- a/webthucung/app/templates/giao_dien_khach_hang.html
+++ b/webthucung/app/templates/giao_dien_khach_hang.html
@@ -124,7 +124,55 @@
           </div>
         </nav>
         <!-- Navbar -->
-    
+        <div id="carouselExampleDark" class="carousel carousel-dark slide">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="10000">
+              <img src="https://www.vets4pets.com/contentassets/389e5c6089c14bc5befbbcf20fadec2b/senior-dog-golden-retriever-close-up.jpg" class="d-block w-100" alt="Wild Landscape">
+              <div class="mask" style="background-color: rgba(181, 21, 21, 0.4)"></div>
+            <div class="carousel-caption d-none d-sm-block mb-5">
+              <h1 class="mb-4">
+                      <strong>Pet House - Chăm sóc thú cưng</strong>
+                    </h1>
+      
+                    <p>
+                      <strong>Cơ sở chăm sóc thú cưng số 1 tại Thành Phố Hồ Chí Minh</strong>
+                    </p>
+      
+                    <p class="mb-4 d-none d-md-block">
+                      <strong>
+                        "Ngôi Nhà Yêu Thương Cho Thú Cưng Của Bạn"</strong>
+                    </p>
+              </div>
+            </div>
+            <div class="carousel-item" data-bs-interval="2000">
+              <img src="..." class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Second slide label</h5>
+                <p>Some representative placeholder content for the second slide.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="..." class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Third slide label</h5>
+                <p>Some representative placeholder content for the third slide.</p>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
         <!-- Jumbotron -->
         <div id="intro" class="p-5 text-center bg-light">
           <h1 class="mb-3 h2">Learn Bootstrap 5 with MDB</h1>
@@ -149,7 +197,7 @@
               <div class="col-lg-4 col-md-12 mb-4">
                 <div class="card">
                   <div class="bg-image hover-overlay" data-mdb-ripple-init data-mdb-ripple-color="light">
-                    <img src="https://mdbootstrap.com/img/new/standard/nature/184.jpg" class="img-fluid" />
+                    <img src="https://scontent.fdad3-4.fna.fbcdn.net/v/t39.30808-6/456698590_427827633630500_6122232026928957213_n.jpg?stp=dst-jpg_s600x600_tt6&_nc_cat=101&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeFHcwrVVsjRO5eHOm0Z03Q1M4ZpRZJbpQ4zhmlFklulDgW6TzTWI_wqnsKKeVF5bvYo2bFybwT-A9U1wcwPX3Y0&_nc_ohc=Xgu9XVWOkEIQ7kNvgF3SU62&_nc_zt=23&_nc_ht=scontent.fdad3-4.fna&_nc_gid=A9ytwNKYaY_2AdH6gKapffV&oh=00_AYCnVxteVWaLhCzwm7YzDQwT7GzIi2RkFjeg74iojbd_vQ&oe=67914817" class="img-fluid" />
                     <a href="#!">
                       <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                     </a>
@@ -160,7 +208,8 @@
                       Some quick example text to build on the card title and make up the bulk of the
                       card's content.
                     </p>
-                    <a href="#!" class="btn btn-primary" data-mdb-ripple-init>Read</a>
+                    <a class="btn btn-primary m-2" href="http://127.0.0.1:8000/dang-ky-kham-benh/" role="button" rel="nofollow"
+                   data-mdb-ripple-init target="_blank">Đăng kí khám bệnh</a>                 
                   </div>
                 </div>
               </div>
