--- a/webthucung/app/templates/giao_dien_khach_hang.html
+++ b/webthucung/app/templates/giao_dien_khach_hang.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Thông tin chi tiết thú cưng</title>
+    <title>Tài khoản</title>
     <!-- CSS -->
      {% load static %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -73,122 +73,108 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
           <div class="container-fluid">
             <!-- Navbar brand -->
-            <a class="navbar-brand" target="_blank" href="https://mdbootstrap.com/docs/standard/">
-              <img src="https://mdbootstrap.com/img/logo/mdb-transaprent-noshadows.png" height="16" alt=""
+            <!-- logo -->
+            <a class="navbar-brand" target="_blank" href="http://127.0.0.1:8000/">
+              <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/473723691_1002491608374754_5189314962434618562_n.png?_nc_cat=111&ccb=1-7&_nc_sid=0024fc&_nc_eui2=AeEDeShnCPyE1crSUjUpyJ8js4fz9kghMoezh_P2SCEyh6VuAGwQzZ1lHCBkryZeVShFS0ItXLDNl8s1ggq5ca-g&_nc_ohc=BOXPLlxyVEkQ7kNvgH0roAq&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent.xx&oh=03_Q7cD1gEg1AWa_qVQ541W40Cwr2BLuMcVt_VZi5_YO2B74wu-BA&oe=67B493C8" 
+              height="60" alt=""
                 loading="lazy" style="margin-top: -3px;" />
-            </a>
-            <button class="navbar-toggler" type="button" data-mdb-collapse-init data-mdb-target="#navbarExample01"
-              aria-controls="navbarExample01" aria-expanded="false" aria-label="Toggle navigation">
-              <i class="fas fa-bars"></i>
+            <!-- logo -->
+            <a class="navbar-brand" href="#">Pet Health Care System</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarExample01">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item active">
-                  <a class="nav-link" aria-current="page" href="#intro">Home</a>
-                </li>
+
                 <li class="nav-item">
-                  <a class="nav-link" href="https://www.youtube.com/channel/UC5CF7mLQZhvx8O5GODZAhdA" rel="nofollow"
-                    target="_blank">Learn Bootstrap 5</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="https://mdbootstrap.com/docs/standard/" target="_blank">Download MDB UI
-                    KIT</a>
+                  <a class="nav-link active" aria-current="page" href="#">Home</a>     
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Khách Hàng
+                  </a>
+  
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="{% url 'quan_ly_thu_cung' %}">Quản lý danh sách thú cưng</a></li>
+                    <li><a class="dropdown-item" href="{% url 'chi_tiet_thu_cung' %}">Thông tin chi tiết của thú cưng</a></li>
+                    <li><a class="dropdown-item" href="{% url 'dang_ky_kham_benh' %}">Đăng ký khám bệnh</a></li>
+                    <li><a class="dropdown-item" href="{% url 'danh_gia_nguoi_dung' %}">Đánh giá người dùng</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="{% url 'thong_tin_khac' %}">Thông tin khác</a></li>
+                  </ul>
                 </li>
               </ul>
-    
-              <ul class="navbar-nav d-flex flex-row">
-                <!-- Icons -->
-                <li class="nav-item me-3 me-lg-0">
-                  <a class="nav-link" href="https://www.youtube.com/channel/UC5CF7mLQZhvx8O5GODZAhdA" rel="nofollow"
-                    target="_blank">
-                    <i class="fab fa-youtube"></i>
-                  </a>
-                </li>
-                <li class="nav-item me-3 me-lg-0">
-                  <a class="nav-link" href="https://www.facebook.com/mdbootstrap" rel="nofollow" target="_blank">
-                    <i class="fab fa-facebook-f"></i>
-                  </a>
-                </li>
-                <li class="nav-item me-3 me-lg-0">
-                  <a class="nav-link" href="https://twitter.com/MDBootstrap" rel="nofollow" target="_blank">
-                    <i class="fab fa-twitter"></i>
-                  </a>
-                </li>
-                <li class="nav-item me-3 me-lg-0">
-                  <a class="nav-link" href="https://github.com/mdbootstrap/mdb-ui-kit" rel="nofollow" target="_blank">
-                    <i class="fab fa-github"></i>
-                  </a>
-                </li>
-              </ul>
+          </li>
+              <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+              </form>
             </div>
-          </div>
+          </div>   
         </nav>
         <!-- Navbar -->
-        <div id="carouselExampleDark" class="carousel carousel-dark slide">
+        <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-mdb-ride="carousel">
           <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>           
+         
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="10000">
               <img src="https://www.vets4pets.com/contentassets/389e5c6089c14bc5befbbcf20fadec2b/senior-dog-golden-retriever-close-up.jpg" class="d-block w-100" alt="Wild Landscape">
-              <div class="mask" style="background-color: rgba(181, 21, 21, 0.4)"></div>
-            <div class="carousel-caption d-none d-sm-block mb-5">
-              <h1 class="mb-4">
-                      <strong>Pet House - Chăm sóc thú cưng</strong>
-                    </h1>
-      
-                    <p>
-                      <strong>Cơ sở chăm sóc thú cưng số 1 tại Thành Phố Hồ Chí Minh</strong>
-                    </p>
-      
-                    <p class="mb-4 d-none d-md-block">
-                      <strong>
-                        "Ngôi Nhà Yêu Thương Cho Thú Cưng Của Bạn"</strong>
-                    </p>
+              <div class="mask" style="background-color: rgba(5, 113, 19, 0.4)"></div>
+              <div class="carousel-caption d-none d-sm-block mb-5">
+                <h1 class="mb-4">
+                        <strong>
+                          Pet House - Nơi Yêu Thương Thú Cưng Bắt Đầu</strong>
+                      </h1>
+        
+                      <p>
+                        <strong>Cơ sở chăm sóc thú cưng số 1 tại Thành Phố Hồ Chí Minh</strong>
+                      </p>
+        
+                      <p class="mb-4 d-none d-md-block">
+                        <strong>
+                          "Ngôi Nhà Yêu Thương Cho Thú Cưng Của Bạn"</strong>
+                      </p>
               </div>
-            </div>
-            <div class="carousel-item" data-bs-interval="2000">
-              <img src="..." class="d-block w-100" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Second slide label</h5>
-                <p>Some representative placeholder content for the second slide.</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="..." class="d-block w-100" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
-                <p>Some representative placeholder content for the third slide.</p>
-              </div>
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
-        <!-- Jumbotron -->
-        <div id="intro" class="p-5 text-center bg-light">
-          <h1 class="mb-3 h2">Learn Bootstrap 5 with MDB</h1>
-          <p class="mb-3">Best & free guide of responsive web design</p>
-          <a class="btn btn-primary m-2" href="https://www.youtube.com/watch?v=c9B4TPnak1A" role="button" rel="nofollow"
-            data-mdb-ripple-init target="_blank">Start tutorial</a>
-          <a class="btn btn-primary m-2" href="https://mdbootstrap.com/docs/standard/" target="_blank"
-            data-mdb-ripple-init role="button">Download MDB UI KIT</a>
-        </div>
-        <!-- Jumbotron -->
-      </header>
-      <!--Main Navigation-->
-    
+            </div>     
+          </div>       
+
+  </header>
+
       <!--Main layout-->
       <main class="my-5">
         <div class="container">
+       <!--video + thông tin -->
+    <section>
+      <div class="row">
+        <div class="col-md-6 gx-5 mb-4">
+          <div class="bg-image hover-overlay shadow-2-strong" data-mdb-ripple-init data-mdb-ripple-color="light">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/cxanD69Bqic?si=-Ok6fFxqo59y_Wp-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <a href="#!">
+              <div class="mask" style="background -color: rgba(251, 251, 251, 0.15);"></div>
+            </a>
+          </div>
+        </div>
+
+        <div class="col-md-6 gx-5 mb-4">
+          <h4><strong>
+            Pet House - Thiên Đường Dành Cho Thú Cưng Của Bạn</strong></h4>
+          <p class="text-muted">
+            Chào mừng bạn đến với Pet House, không gian dành riêng cho những ai yêu thương và
+            chăm sóc thú cưng! Chúng tôi hiểu rằng thú cưng không chỉ là những người bạn nhỏ mà còn là
+            thành viên quan trọng trong gia đình bạn.
+          </p>
+          <p><strong>Pet House</strong></p>
+          <p class="text-muted">
+            Pet House là một cửa hàng hoặc thương hiệu cung cấp các sản phẩm và dịch vụ cho thú cưng. Đây
+            có thể là nơi bạn tìm thấy mọi thứ cần thiết để chăm sóc thú cưng của mình, từ thức ăn, đồ chơi, phụ
+            kiện, đến các dịch vụ như grooming (chăm sóc lông), khám sức khỏe hoặc thậm chí là khách sạn thú cưng.
+          </p>
+        </div>
+      </div>
+    </section>
+   <!--video + thông tin -->
           <!--Section: Content-->
           <section class="text-center">
             <h4 class="mb-5"><strong>Latest posts</strong></h4>
@@ -196,18 +182,14 @@
             <div class="row">
               <div class="col-lg-4 col-md-12 mb-4">
                 <div class="card">
-                  <div class="bg-image hover-overlay" data-mdb-ripple-init data-mdb-ripple-color="light">
-                    <img src="https://scontent.fdad3-4.fna.fbcdn.net/v/t39.30808-6/456698590_427827633630500_6122232026928957213_n.jpg?stp=dst-jpg_s600x600_tt6&_nc_cat=101&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeFHcwrVVsjRO5eHOm0Z03Q1M4ZpRZJbpQ4zhmlFklulDgW6TzTWI_wqnsKKeVF5bvYo2bFybwT-A9U1wcwPX3Y0&_nc_ohc=Xgu9XVWOkEIQ7kNvgF3SU62&_nc_zt=23&_nc_ht=scontent.fdad3-4.fna&_nc_gid=A9ytwNKYaY_2AdH6gKapffV&oh=00_AYCnVxteVWaLhCzwm7YzDQwT7GzIi2RkFjeg74iojbd_vQ&oe=67914817" class="img-fluid" />
+                  <div class="bg-image hover-zoom" data-mdb-ripple-init data-mdb-ripple-color="light">
+                    <img src="https://scontent.fdad3-4.fna.fbcdn.net/v/t39.30808-6/456698590_427827633630500_6122232026928957213_n.jpg?stp=dst-jpg_s600x600_tt6&_nc_cat=101&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeFHcwrVVsjRO5eHOm0Z03Q1M4ZpRZJbpQ4zhmlFklulDgW6TzTWI_wqnsKKeVF5bvYo2bFybwT-A9U1wcwPX3Y0&_nc_ohc=Xgu9XVWOkEIQ7kNvgF3SU62&_nc_zt=23&_nc_ht=scontent.fdad3-4.fna&_nc_gid=A9ytwNKYaY_2AdH6gKapffV&oh=00_AYCnVxteVWaLhCzwm7YzDQwT7GzIi2RkFjeg74iojbd_vQ&oe=67914817" class="w-100" />
                     <a href="#!">
                       <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                     </a>
                   </div>
                   <div class="card-body">
-                    <h5 class="card-title">Post title</h5>
-                    <p class="card-text">
-                      Some quick example text to build on the card title and make up the bulk of the
-                      card's content.
-                    </p>
+                                        
                     <a class="btn btn-primary m-2" href="http://127.0.0.1:8000/dang-ky-kham-benh/" role="button" rel="nofollow"
                    data-mdb-ripple-init target="_blank">Đăng kí khám bệnh</a>                 
                   </div>
