--- a/project/CNPM/home/templates/home/thucan.html
+++ b/project/CNPM/home/templates/home/thucan.html
@@ -711,6 +711,45 @@
                 </div>
               </div>
             </section>
+            <section class="cart">
+              <form action="">
+                <table>
+                  <thead>
+                    <tr>
+                      <th>san pham</th>
+                      <th>gia</th>
+                      <th>so luong</th>
+                      <th>xoa</th>
+                    </tr>
+                  </thead>
+                </table>
+                <tbody>
+                  <tr> 
+                    <div class="meow">
+
+                    <td>
+                      <img
+                        src="{% static 'home/images/thucan1.webp' %}"
+                        alt=""
+                      />
+                      thucann1
+                    </td>
+                    <td>
+                      <p>
+                        <span class="product-price" data-price="100000"
+                          >100.000</span
+                        >
+                        <sup>đ</sup>
+                      </p>
+                    </td>
+                    <td><input type="number" value="1" min="0" /></td>
+                    <td>xoa'</td>
+                  </tr> 
+                </div>
+
+                </tbody>
+              </form>
+            </section>
           </div>
         </div>
       </main>
