--- a/webthucung/app/templates/giao_dien_khach_hang.html
+++ b/webthucung/app/templates/giao_dien_khach_hang.html
@@ -157,24 +157,45 @@
           </div>
         </div>
 
-        <div class="col-md-6 gx-5 mb-4">
-          <h4><strong>
-            Pet House - Thiên Đường Dành Cho Thú Cưng Của Bạn</strong></h4>
+        <div class="col-md-6 gx-5 mb-4" style="color: rgba(13, 78, 6, 0.82)" >
+          <h3><strong>
+            Pet House - Thiên Đường Dành Cho Thú Cưng Của Bạn</strong></h3>
           <p class="text-muted">
             Chào mừng bạn đến với Pet House, không gian dành riêng cho những ai yêu thương và
             chăm sóc thú cưng! Chúng tôi hiểu rằng thú cưng không chỉ là những người bạn nhỏ mà còn là
             thành viên quan trọng trong gia đình bạn.
           </p>
-          <p><strong>Pet House</strong></p>
+          <p><strong>Hãy để Pet House đồng hành cùng bạn trên hành trình chăm sóc và yêu thương những người bạn nhỏ đáng yêu!</strong></p>
           <p class="text-muted">
-            Pet House là một cửa hàng hoặc thương hiệu cung cấp các sản phẩm và dịch vụ cho thú cưng. Đây
-            có thể là nơi bạn tìm thấy mọi thứ cần thiết để chăm sóc thú cưng của mình, từ thức ăn, đồ chơi, phụ
-            kiện, đến các dịch vụ như grooming (chăm sóc lông), khám sức khỏe hoặc thậm chí là khách sạn thú cưng.
+            Pet House là nơi mang đến cho thú cưng của bạn những dịch vụ chăm sóc toàn diện và sản phẩm chất lượng cao, giúp thú cưng luôn khỏe mạnh và hạnh phúc. Với sứ mệnh trở thành ngôi nhà thứ hai cho các bé thú cưng, Pet House cung cấp đa dạng các dịch vụ như spa, grooming, khám sức khỏe định kỳ, và khách sạn cho thú cưng.
           </p>
         </div>
       </div>
     </section>
    <!--video + thông tin -->
+   <!--tab -->
+   <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">Enable both scrolling & backdrop</button>
+
+   <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
+     <div class="offcanvas-header">
+       <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Tài khoản</h5>
+       <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+     </div>
+     <div class="list-group list-group-light">
+      <a href="#" class="list-group-item list-group-item-action px-3 border-0 active" data-mdb-ripple-init
+        aria-current="true">The current link item with a ripple</a>
+      <a href="#" class="list-group-item list-group-item-action px-3 border-0" data-mdb-ripple-init>A second link item with
+        a ripple</a>
+      <a href="#" class="list-group-item list-group-item-action px-3 border-0" data-mdb-ripple-init>A third link item with
+        a ripple</a>
+      <a href="#" class="list-group-item list-group-item-action px-3 border-0" data-mdb-ripple-init>A fourth link item with
+        a ripple</a>
+    </div>
+     <div class="offcanvas-body">
+       <p>Try scrolling the rest of the page to see this option in action.</p>
+     </div>
+   </div>
+   <!--tab -->
           <!--Section: Content-->
           <section class="text-center">
             <h4 class="mb-5"><strong>Latest posts</strong></h4>
@@ -190,8 +211,10 @@
                   </div>
                   <div class="card-body">
                                         
-                    <a class="btn btn-primary m-2" href="http://127.0.0.1:8000/dang-ky-kham-benh/" role="button" rel="nofollow"
-                   data-mdb-ripple-init target="_blank">Đăng kí khám bệnh</a>                 
+                    <a class="btn btn-primary m-2" style="background-color:rgb(13, 120, 72);" href="http://127.0.0.1:8000/dang-ky-kham-benh/" role="button" rel="nofollow"
+                   data-mdb-ripple-init target="_blank">Đăng kí khám </a>     
+                   <a class="btn btn-primary m-2" style="background-color:rgb(13, 120, 72);"  href="http://127.0.0.1:8000/dang-ky-kham-benh/" role="button" rel="nofollow"
+                   data-mdb-ripple-init target="_blank">Hủy đăng kí </a>               
                   </div>
                 </div>
               </div>
@@ -199,18 +222,14 @@
               <div class="col-lg-4 col-md-6 mb-4">
                 <div class="card">
                   <div class="bg-image hover-overlay" data-mdb-ripple-init data-mdb-ripple-color="light">
-                    <img src="https://mdbootstrap.com/img/new/standard/nature/023.jpg" class="img-fluid" />
+                    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/473038159_488662543908252_6544356066530044815_n.png?stp=dst-png_s480x480&_nc_cat=110&ccb=1-7&_nc_sid=0024fc&_nc_eui2=AeGQjwAr-ZvKkuhxz38k-GAXVaymd5-uj3BVrKZ3n66PcLwVUJfruM-c2j-oXh-CXyYQ-FxY5nxZT_Md9PJUqaPl&_nc_ohc=zvp8g1KKUUEQ7kNvgHh-PAN&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent.xx&oh=03_Q7cD1gGGp5weYuY360FCN1NEjg6mJoQP1bvllmo2Y0QXRga2eg&oe=67B5EE66" class="w-100"   />
                     <a href="#!">
                       <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                     </a>
                   </div>
-                  <div class="card-body">
-                    <h5 class="card-title">Post title</h5>
-                    <p class="card-text">
-                      Some quick example text to build on the card title and make up the bulk of the
-                      card's content.
-                    </p>
-                    <a href="#!" class="btn btn-primary" data-mdb-ripple-init>Read</a>
+                  <div class="card-body">     
+                    <a class="btn btn-primary m-2" style="background-color:rgb(13, 120, 72);" href="http://127.0.0.1:8000/dang-ky-kham-benh/" role="button" rel="nofollow"
+                   data-mdb-ripple-init target="_blank"> Kiểm tra tình trạng thú cưng</a>    
                   </div>
                 </div>
               </div>
