--- a/webthucung/app/templates/giao_dien_khach_hang.html
+++ b/webthucung/app/templates/giao_dien_khach_hang.html
@@ -172,34 +172,32 @@
         </div>
       </div>
     </section>
-   <!--video + thông tin -->
-   <!--tab -->
-   <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">Enable both scrolling & backdrop</button>
-
-   <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
-     <div class="offcanvas-header">
-       <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Tài khoản</h5>
-       <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-     </div>
-     <div class="list-group list-group-light">
-      <a href="#" class="list-group-item list-group-item-action px-3 border-0 active" data-mdb-ripple-init
-        aria-current="true">The current link item with a ripple</a>
-      <a href="#" class="list-group-item list-group-item-action px-3 border-0" data-mdb-ripple-init>A second link item with
-        a ripple</a>
-      <a href="#" class="list-group-item list-group-item-action px-3 border-0" data-mdb-ripple-init>A third link item with
-        a ripple</a>
-      <a href="#" class="list-group-item list-group-item-action px-3 border-0" data-mdb-ripple-init>A fourth link item with
-        a ripple</a>
-    </div>
-     <div class="offcanvas-body">
-       <p>Try scrolling the rest of the page to see this option in action.</p>
-     </div>
-   </div>
-   <!--tab -->
-          <!--Section: Content-->
+   <!--video + thông tin -->        
           <section class="text-center">
-            <h4 class="mb-5"><strong>Latest posts</strong></h4>
-    
+            <h3 style="color: rgba(13, 78, 6, 0.82)"><strong>Xin chào! Chào mừng bạn đến với Pet House!       
+            </strong></h3>
+    <!--tab --> 
+   <div class="d-grid gap-2 col-6 mx-auto">
+    <button class="btn btn-outline-success"  style="margin: 30px;"type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">Tài khoản của tôi</button>
+   </div>
+    <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
+      <div class="offcanvas-header">
+        <h2 class="offcanvas-title" style="color: rgba(13, 78, 6, 0.82)"  id="offcanvasWithBothOptionsLabel">TÀI KHOẢN CỦA TÔI</h2>
+        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      </div>
+      <div class="list-group list-group-light">
+       <a href="http://127.0.0.1:8000/giao_dien_khach_hang/#" class="list-group-item list-group-item-action px-3 border-0 " data-mdb-ripple-init
+         aria-current="true">TRANG TÀI KHOẢN</a>
+       <a href="http://127.0.0.1:8000/dang-ky-kham-benh/" class="list-group-item list-group-item-action px-3 border-0" data-mdb-ripple-init>ĐĂNG KÍ KHÁM BỆNH</a>
+       <a href="#" class="list-group-item list-group-item-action px-3 border-0" data-mdb-ripple-init>HỦY ĐĂNG KÍ KHÁM BỆNH</a>
+       <a href="#" class="list-group-item list-group-item-action px-3 border-0" data-mdb-ripple-init>KIỂM TRA TÌNH TRẠNG THÚ CƯNG</a>
+     </div>
+      <div class="offcanvas-body">
+        <p>Try scrolling the rest of the page to see this option in action.</p>
+      </div>
+    </div>
+    <!--tab -->
+
             <div class="row">
               <div class="col-lg-4 col-md-12 mb-4">
                 <div class="card">
@@ -214,7 +212,8 @@
                     <a class="btn btn-primary m-2" style="background-color:rgb(13, 120, 72);" href="http://127.0.0.1:8000/dang-ky-kham-benh/" role="button" rel="nofollow"
                    data-mdb-ripple-init target="_blank">Đăng kí khám </a>     
                    <a class="btn btn-primary m-2" style="background-color:rgb(13, 120, 72);"  href="http://127.0.0.1:8000/dang-ky-kham-benh/" role="button" rel="nofollow"
-                   data-mdb-ripple-init target="_blank">Hủy đăng kí </a>               
+                   data-mdb-ripple-init target="_blank">Hủy đăng kí </a>       
+
                   </div>
                 </div>
               </div>
@@ -228,27 +227,24 @@
                     </a>
                   </div>
                   <div class="card-body">     
-                    <a class="btn btn-primary m-2" style="background-color:rgb(13, 120, 72);" href="http://127.0.0.1:8000/dang-ky-kham-benh/" role="button" rel="nofollow"
+                    <a class="btn btn-primary m-2" style="background-color:rgb(13, 120, 72);" href="http://127.0.0.1:8000/chi-tiet-thu-cung/" role="button" rel="nofollow"
                    data-mdb-ripple-init target="_blank"> Kiểm tra tình trạng thú cưng</a>    
+                   
                   </div>
                 </div>
               </div>
-    
+    <!--Section: Content-->
               <div class="col-lg-4 col-md-6 mb-4">
                 <div class="card">
                   <div class="bg-image hover-overlay" data-mdb-ripple-init data-mdb-ripple-color="light">
-                    <img src="https://mdbootstrap.com/img/new/standard/nature/111.jpg" class="img-fluid" />
+                    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/474102782_2987857414723550_2367006798482007857_n.png?stp=dst-png_s480x480&_nc_cat=107&ccb=1-7&_nc_sid=0024fc&_nc_eui2=AeEyPrz7V7mkyeSIDHbNC3zRFYyUeINyf28VjJR4g3J_bzBUIeHIcHCmpsIGzqXNfSIwVH29gEeFTOmLdW_OWPe6&_nc_ohc=r-1Lc31uAo0Q7kNvgGqOvR2&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent.xx&oh=03_Q7cD1gFXeZLqk2IIWzgZTZfWyokNGD8iwni0myj98aL9QPNrnA&oe=67B831FB" class="img-fluid" />
                     <a href="#!">
                       <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                     </a>
                   </div>
-                  <div class="card-body">
-                    <h5 class="card-title">Post title</h5>
-                    <p class="card-text">
-                      Some quick example text to build on the card title and make up the bulk of the
-                      card's content.
-                    </p>
-                    <a href="#!" class="btn btn-primary" data-mdb-ripple-init>Read</a>
+                  <div class="card-body">                                      
+                    <a class="btn btn-primary m-2" style="background-color:rgb(13, 120, 72);"  href="http://127.0.0.1:8000/dang-ky-kham-benh/" role="button" rel="nofollow"
+                    data-mdb-ripple-init target="_blank">Đơn hàng </a> 
                   </div>
                 </div>
               </div>
