--- a/app/templates/app/booking.html
+++ b/app/templates/app/booking.html
@@ -14,6 +14,11 @@
             background-color: hsl(203, 89.90%, 64.90%); /* Màu nền chuyển sang đỏ khi hover */
             color: white; /* Chữ chuyển sang màu trắng */
       }
+      .nav-link.active {
+        color: black; /* Màu chữ khi active */
+        background-color:rgb(16, 207, 255); /* Màu nền khi active */
+        border-radius: 5px;
+    }
         footer {
           background-color: #f8f9fa;
           text-align: center;
@@ -38,7 +43,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="{% url 'booking'%}">
                 Booking
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
